crates/ox_content_renderer/tests/snapshots/renderer/blockquote_multi_paragraph.snap
---
source: crates/ox_content_renderer/tests/snapshot_render.rs
assertion_line: 29
description: "> first\n>\n> second\n"
---
<blockquote>
<p>first</p>
<p>second</p>
</blockquote>
