crates/ox_content_renderer/tests/snapshots/renderer/empty_document.snap
---
source: crates/ox_content_renderer/tests/snapshot_render.rs
assertion_line: 29
description: ""
---

